# RenderCPP

./: CMakeLists.txt  Camera.cpp  Cone.cpp  Cylinder.cpp  KeyboardMouseControl.cpp  Light.cpp  Makefile  PhongColor.cpp  Plane.cpp  README.md  Render.cpp  RenderCPP  Sphere.cpp  Vec3d.cpp  Window.cpp  main.cpp
Primitives/: Camera.cpp  Camera.h  Light.cpp  Light.h  Primitive.h  Render.cpp  Render.h  Sphere.cpp  Sphere.h  Vec3.cpp  Vec3.h  Vec3d.cpp  Vec3d.h  Vector3f.h  Window.cpp  Window.h
includes/: Camera.h  Cone.h  Cylinder.h  KeyboardMouseControl.h  Light.h  Plane.h  Primitive.h  Render.h  RenderFunctions.h  Sphere.h  Vec3d.h  Window.h
libft/: ._Makefile  ._ft_atoi.c  ._ft_bzero.c  ._ft_isalnum.c  ._ft_isalpha.c  ._ft_isascii.c  ._ft_lstadd.c  ._ft_lstdel.c  ._ft_lstdelone.c  ._ft_lstiter.c  ._ft_memalloc.c  ._ft_memccpy.c  ._ft_memchr.c  ._ft_memcpy.c  ._ft_memdel.c  ._ft_memmove.c  ._ft_memset.c  ._ft_putchar_fd.c  ._ft_putendl.c  ._ft_putnbr.c  ._ft_putstr.c  ._ft_strcat.c  ._ft_strchr.c  ._ft_strcmp.c  ._ft_strdel.c  ._ft_strdup.c  ._ft_strequ.c  ._ft_striter.c  ._ft_striteri.c  ._ft_strlen.c  ._ft_strmap.c  ._ft_strmapi.c  ._ft_strncmp.c  ._ft_strnequ.c  ._ft_strrchr.c  ._ft_strstr.c  ._ft_strsub.c  ._ft_strtrim.c  ._ft_tolower.c  ._get_next_line.c  (+1 more)
